# edje2yuv

./: .gitlab-ci.yml  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile  README  README.md  edje2yuv.1  edje2yuv.c  meson.build  sample.edc
src/: CMakeLists.txt  edje2yuv.c
test/: Makefile  README.edje  sample.edc
